--- a/index.html
+++ b/index.html
@@ -4,8 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./Assests/style.css">
 </head>
+<!--start navigation bar-->
 <body>
+    <nav>
+        <div class="logo">
+
+            <img src="./Assests/images/Jarvis-logo.png.svg" alt="logo"></a>
+        </div>
+        <div class="navbar">
+            <ul><li><a href="">Home</a></li>
+            <li><a href="">Products</a></li>
+            <li><a href="">Solutions</a></li>
+            <li><a href="">Company</a></li>
+            <li><a href="">Library</a></li>
+            <li><a href="">Media</a></li>
+            <li><a href="">Contact Us</a></li>
+            <li><a href="">Retail</a></li>
+            <li><span class="primary-button">Schedule demo</span></li>
+            </ul>
+            
+        </div>
+    </nav>
+    <!--end navigation bar-->
+
+    <!--start jarvis intro -->
+    <section class="jv-intro">
+        <div class="container text-center" style="padding-top:50px;">
+            <div class="text-small text-medium mb-3 text-uppercase">Redefine the paradigm in managing your investments</div>
+            <h1>
+                <span class="text-blue">AI driven</span> Investment Solutions Platform
+            </h1>
+            <div class="text-extra-big">
+                Explore solutions that are curated to simplify and streamline every aspect of a customer's journey in
+                the equity markets.
+            </div>
+            <a class="btn btn-outline-secondary" href="#contactForm">Schedule Demo</a>
+        </div>
+    </section>
+    <!--end jarvis intro-->
     
 </body>
 </html>
